deploy/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sre-edu-os
  labels:
    app: sre-edu-os
