deploy/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-ingress
  namespace: sre-edu-os
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts: [app.sreedos.com, api.sreedos.com]
      secretName: sre-tls
  rules:
    - host: app.sreedos.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sre-frontend-svc
                port: { number: 4000 }
    - host: api.sreedos.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sre-backend-svc
                port: { number: 3000 }
